[tool.poetry]
name = "yt-download-to-s3-function"
version = "0.0.1"
description = "Download webm from youtube playlist and save to s3"
authors = ["alexanghh"]

[tool.poetry.dependencies]
python = "~3.9"
pynumaflow = "0.2.6"
boto3 = "~1.19.11"
pytube = "~12.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
