[tool.poetry]
name = "yt-list-playlist-function"
version = "0.0.1"
description = "List youtube playlist and send as msgs"
authors = ["alexanghh"]

[tool.poetry.dependencies]
python = "~3.9"
pynumaflow = "0.2.4"
pytube = "~12.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
