[tool.poetry]
name = "wait-test-function"
version = "0.0.1"
description = "test udf timeout"
authors = ["alexanghh"]

[tool.poetry.dependencies]
python = "~3.9"
pynumaflow = "0.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
